hphp/test/slow/readonly/inout_readonly_argument_callsite.php.expectf

Fatal error: This expression is readonly. We currently do not support passing readonly values to an inout parameter. in %s on line 9
